--- a/day1_todo_app/Taskfile.yml
+++ b/day1_todo_app/Taskfile.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 
 vars:
   GO_MODULE: github.com/lirlia/100day_challenge_backend
@@ -6,7 +6,7 @@ vars:
 tasks:
   default:
     cmds:
-      - task --list-all
+      - go tool task --list-all
 
   build:
     cmds:
@@ -14,7 +14,7 @@ tasks:
 
   dev:
     cmds:
-      - air
+      - go tool air
 
   docker-compose:
     cmds:
