--- a/day2_simple_ec/package.json
+++ b/day2_simple_ec/package.json
@@ -13,8 +13,12 @@
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "chart.js": "^4.4.8",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^4.1.0",
     "next": "15.3.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
