--- a/day4_timeline_sns/package.json
+++ b/day4_timeline_sns/package.json
@@ -17,19 +17,21 @@
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "framer-motion": "^11.0.0",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "22.14.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.0",
     "biome": "^0.2.2",
+    "postcss": "^8",
     "prisma": "^6.6.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.4.0",
     "tsx": "^4.16.0",
     "typescript": "^5"
   },
