--- a/day4_timeline_sns/tsconfig.json
+++ b/day4_timeline_sns/tsconfig.json
@@ -23,6 +23,6 @@
       "@app/*": ["./app/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "lib/**/*.ts"],
   "exclude": ["node_modules"]
 }
