--- a/day7_passkey_auth/package.json
+++ b/day7_passkey_auth/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "@simplewebauthn/browser": "^13.1.0",
+    "@simplewebauthn/server": "^13.1.1",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@simplewebauthn/types": "^12.0.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "22.14.1",
     "@types/react": "^19",
