--- a/day7_passkey_auth/package.json
+++ b/day7_passkey_auth/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@playwright/test": "^1.52.0",
     "@simplewebauthn/types": "^12.0.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "22.14.1",
