--- a/day8_git_browser/package.json
+++ b/day8_git_browser/package.json
@@ -13,11 +13,15 @@
   "dependencies": {
     "@prisma/client": "^6.6.0",
     "git-http-backend": "^1.1.2",
+    "github-markdown-css": "^5.8.1",
+    "highlight.js": "^11.11.1",
     "isomorphic-git": "^1.30.1",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
