--- a/day9_collaborative_editor/package.json
+++ b/day9_collaborative_editor/package.json
@@ -10,14 +10,19 @@
     "start:ws": "node server.js"
   },
   "dependencies": {
+    "@types/sharedb": "^5.1.0",
     "@types/ws": "^8.18.1",
     "next": "^14.2.5",
     "ot": "^0.0.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "reconnecting-websocket": "^4.4.0",
+    "rich-text": "^4.1.0",
+    "sharedb": "^5.2.1",
     "ws": "^8.18.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.52.0",
     "@tailwindcss/postcss": "^4.1.4",
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
