--- a/day10_graphql_media_app/package.json
+++ b/day10_graphql_media_app/package.json
@@ -18,7 +18,8 @@
     "graphql-tag": "^2.12.6",
     "next": "15.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
