--- a/day10_graphql_media_app/package.json
+++ b/day10_graphql_media_app/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@apollo/server": "^4.12.0",
     "@as-integrations/next": "^3.2.0",
+    "@graphql-tools/graphql-file-loader": "^8.0.19",
+    "@graphql-tools/load": "^8.1.0",
     "@prisma/client": "^6.6.0",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
