--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.52.0",
     "@tailwindcss/typography": "^0.5.16"
   }
 }
