--- a/day12_interactive_data_explorer/biome.json
+++ b/day12_interactive_data_explorer/biome.json
@@ -3,6 +3,9 @@
   "organizeImports": {
     "enabled": true
   },
+  "files": {
+    "ignore": [".next/**", "app/generated/**"]
+  },
   "linter": {
     "enabled": true,
     "rules": {
@@ -12,9 +15,6 @@
       },
       "suspicious": {
         "noConsoleLog": "warn"
-      },
-      "style": {
-        "useConsistentCasing": "error"
       }
     }
   },
@@ -27,7 +27,7 @@
   "javascript": {
     "formatter": {
       "quoteStyle": "single",
-      "trailingComma": "es5",
+      "trailingCommas": "es5",
       "semicolons": "always"
     }
   }
