--- a/template/package.json
+++ b/template/package.json
@@ -27,5 +27,8 @@
     "tailwindcss": "^4",
     "tsx": "^4.16.0",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
