--- a/day22_distributed_cache/package.json
+++ b/day22_distributed_cache/package.json
@@ -12,14 +12,9 @@
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
-    "next": "^14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@types/react-syntax-highlighter": "^15.5.13",
-    "quill-delta": "^5.1.0",
-    "react-markdown": "^10.1.0",
-    "react-syntax-highlighter": "^15.6.1",
-    "remark-gfm": "^4.0.1"
+    "next": "15.3.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
