--- a/day22_distributed_cache/package.json
+++ b/day22_distributed_cache/package.json
@@ -18,17 +18,18 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@playwright/test": "^1.52.0",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "22.14.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.21",
     "biome": "^0.2.2",
     "prisma": "^6.7.0",
     "tailwindcss": "^4",
     "tsx": "^4.16.0",
-    "typescript": "^5",
-    "@playwright/test": "^1.52.0",
-    "@tailwindcss/typography": "^0.5.16"
+    "typescript": "^5"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
