--- a/day29-fireworks-controller/dashboard/package.json
+++ b/day29-fireworks-controller/dashboard/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@kubernetes/client-node": "^1.1.2",
     "@prisma/client": "^6.6.0",
+    "framer-motion": "^12.9.4",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
