--- a/day35_workflow_automation_tool/package.json
+++ b/day35_workflow_automation_tool/package.json
@@ -11,7 +11,10 @@
     "check": "biome check --apply ."
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "better-sqlite3": "^11.1.2",
+    "lucide-react": "^0.507.0",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
