--- a/day39_interactive_cow_simulator/package.json
+++ b/day39_interactive_cow_simulator/package.json
@@ -14,7 +14,8 @@
     "better-sqlite3": "^11.1.2",
     "next": "15.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
