day42: Implement APIC timer interrupt (with xAPIC fallback)

--- a/day42_original_os/Makefile
+++ b/day42_original_os/Makefile
@@ -1,10 +1,10 @@
 # Makefile for Day42 Original OS with Limine
 
 # --- Toolchain --- (Adjust to your environment)
-CC_KERNEL  := clang
-LD_KERNEL  := clang # Use clang as the linker driver
-AS_KERNEL  := clang # Use clang as the assembler driver as well for .s files
-OBJCOPY    := /opt/homebrew/opt/llvm/bin/llvm-objcopy # Full path to llvm-objcopy
+CC_KERNEL  := x86_64-elf-gcc
+LD_KERNEL  := x86_64-elf-ld
+AS_KERNEL  := x86_64-elf-as
+OBJCOPY    := x86_64-elf-objcopy
 
 # --- Target --- (x86_64)
 TARGET_ARCH := x86_64
@@ -20,7 +20,7 @@ LIMINE_BIOS_CD_BIN := $(LIMINE_DIR)/limine-bios-cd.bin
 LIMINE_UEFI_CD_BIN := $(LIMINE_DIR)/limine-uefi-cd.bin
 
 # --- Kernel ---
-KERNEL_C_SRCS  := $(SRC_DIR_KERNEL)/main.c $(SRC_DIR_KERNEL)/gdt.c $(SRC_DIR_KERNEL)/idt.c $(SRC_DIR_KERNEL)/pmm.c $(SRC_DIR_KERNEL)/paging.c $(SRC_DIR_KERNEL)/serial.c # Add serial.c
+KERNEL_C_SRCS  := $(SRC_DIR_KERNEL)/main.c $(SRC_DIR_KERNEL)/gdt.c $(SRC_DIR_KERNEL)/idt.c $(SRC_DIR_KERNEL)/pmm.c $(SRC_DIR_KERNEL)/paging.c $(SRC_DIR_KERNEL)/serial.c $(SRC_DIR_KERNEL)/apic.c $(SRC_DIR_KERNEL)/font8x8_basic.c # Add font data file
 KERNEL_S_SRCS  := $(SRC_DIR_KERNEL)/isr_stubs.s $(SRC_DIR_KERNEL)/paging_success_halt.s # Add new assembly file
 KERNEL_HEADERS := $(wildcard $(SRC_DIR_KERNEL)/*.h) $(wildcard $(SRC_DIR_KERNEL)/arch/x86_64/*.h) # Include arch headers too
 
@@ -31,11 +31,11 @@ KERNEL_OBJS      := $(KERNEL_C_OBJS) $(KERNEL_S_OBJS)
 KERNEL_ELF     := $(BUILD_DIR)/kernel.elf
 LINKER_SCRIPT  := $(SCRIPTS_DIR)/linker.ld
 
-CFLAGS_KERNEL  := -target $(TARGET_KERNEL) -ffreestanding -nostdlib -Wall -Wextra -g -I$(SRC_DIR_KERNEL) -mno-red-zone -fPIE
+CFLAGS_KERNEL  := -ffreestanding -nostdlib -Wall -Wextra -g -I$(SRC_DIR_KERNEL) -mno-red-zone -mcmodel=kernel
 # ASFLAGS might be needed if we use a separate assembler like nasm or yasm
 # For clang, it should infer from .s extension or we can use -x assembler
-ASFLAGS_KERNEL := -target $(TARGET_KERNEL) -c # Basic flags for assembling with clang
-LDFLAGS_KERNEL := -T $(LINKER_SCRIPT) --target=$(TARGET_KERNEL) -fuse-ld=lld -nostdlib -static -pie -z max-page-size=0x1000 -Wl,-Map=$(BUILD_DIR)/kernel.map
+ASFLAGS_KERNEL := -g # Basic flags for assembling with as
+LDFLAGS_KERNEL := -T $(LINKER_SCRIPT) -nostdlib -static -z max-page-size=0x1000 --Map=$(BUILD_DIR)/kernel.map # Use direct ld option for Map
 
 # --- Image --- (Limine setup)
 OS_ISO := $(IMAGE_DIR)/os.iso
@@ -58,8 +58,8 @@ OVMF_CODE := image/OVMF_CODE.fd
 OVMF_VARS := image/OVMF_VARS.fd
 QEMU := qemu-system-x86_64
 QEMU_OPTS_COMMON := -no-reboot -no-shutdown -d int -D qemu_debug.log
-QEMU_OPTS_BIOS := -machine pc -m 256M -serial stdio
-QEMU_OPTS_UEFI := -machine q35 -cpu qemu64 -m 256M -drive if=pflash,format=raw,readonly=on,file=$(OVMF_CODE) -drive if=pflash,format=raw,file=$(OVMF_VARS) -serial stdio
+QEMU_OPTS_BIOS := -machine pc -m 256M -cpu SandyBridge,+x2apic -serial stdio
+QEMU_OPTS_UEFI := -machine q35 -cpu SandyBridge,+x2apic -m 256M -drive if=pflash,format=raw,readonly=on,file=$(OVMF_CODE) -drive if=pflash,format=raw,file=$(OVMF_VARS) -serial stdio
 
 all: $(OS_ISO)
 
