day42: Complete APIC timer, fix text rendering, update docs

--- a/day42_original_os/image/limine.conf
+++ b/day42_original_os/image/limine.conf
@@ -2,5 +2,7 @@ timeout: 5
 
 /KERNEL
     protocol: limine
+    # Request x2APIC mode for the kernel (if available)
+    FEATURE=x2apic
     # Assuming limine.conf is in /boot/limine/ and kernel is in /boot/
     path: boot():/boot/kernel.elf
