--- a/day42_original_os/Makefile
+++ b/day42_original_os/Makefile
@@ -20,7 +20,7 @@ LIMINE_BIOS_CD_BIN := $(LIMINE_DIR)/limine-bios-cd.bin
 LIMINE_UEFI_CD_BIN := $(LIMINE_DIR)/limine-uefi-cd.bin
 
 # --- Kernel ---
-KERNEL_C_SRCS  := $(SRC_DIR_KERNEL)/main.c $(SRC_DIR_KERNEL)/gdt.c $(SRC_DIR_KERNEL)/idt.c $(SRC_DIR_KERNEL)/pmm.c $(SRC_DIR_KERNEL)/paging.c $(SRC_DIR_KERNEL)/serial.c $(SRC_DIR_KERNEL)/apic.c $(SRC_DIR_KERNEL)/font8x8_basic.c # Add font data file
+KERNEL_C_SRCS  := $(SRC_DIR_KERNEL)/main.c $(SRC_DIR_KERNEL)/gdt.c $(SRC_DIR_KERNEL)/idt.c $(SRC_DIR_KERNEL)/pmm.c $(SRC_DIR_KERNEL)/paging.c $(SRC_DIR_KERNEL)/serial.c $(SRC_DIR_KERNEL)/apic.c $(SRC_DIR_KERNEL)/font8x8_basic.c $(SRC_DIR_KERNEL)/task.c # Add task.c
 KERNEL_S_SRCS  := $(SRC_DIR_KERNEL)/isr_stubs.s $(SRC_DIR_KERNEL)/paging_success_halt.s # Add new assembly file
 KERNEL_HEADERS := $(wildcard $(SRC_DIR_KERNEL)/*.h) $(wildcard $(SRC_DIR_KERNEL)/arch/x86_64/*.h) # Include arch headers too
 
