day42: step 3/7 Complete CLI, HTTP API, and client implementation; Prepare for E2E testing

--- a/day42_raft_nosql_simulator/.gitignore
+++ b/day42_raft_nosql_simulator/.gitignore
@@ -43,3 +43,11 @@ next-env.d.ts
 # Environment Variables
 .env*.local
 # .env
+
+# Go build artifacts
+/day42_raft_nosql_simulator
+*.exe
+*.out
+
+# Test coverage
+/coverage.out
