day42: step 7/7 Documentation and finalization

--- a/day42_raft_nosql_simulator/Makefile
+++ b/day42_raft_nosql_simulator/Makefile
@@ -50,7 +50,7 @@ run-e2e-verbose:
 # フォーマットとLinter
 fmt: ## フォーマットを実行 (go fmt)
 	@echo "Formatting Go files..."
-	@go fmt $(GO_FILES)
+	@go fmt ./...
 
 vet: ## 静的解析を実行 (go vet)
 	@echo "Running go vet..."
