--- a/day44_virtual_router/frontend/package.json
+++ b/day44_virtual_router/frontend/package.json
@@ -14,7 +14,8 @@
     "better-sqlite3": "^11.1.2",
     "next": "15.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "reactflow": "^11.11.4"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
