--- a/day47_cdn_simulator/package.json
+++ b/day47_cdn_simulator/package.json
@@ -18,11 +18,12 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.7",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "22.14.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "biome": "^0.2.2",
     "tailwindcss": "^4",
     "tsx": "^4.16.0",
