--- a/day52_tiny_realm_adventures/package.json
+++ b/day52_tiny_realm_adventures/package.json
@@ -6,9 +6,10 @@
     "dev": "next dev --turbopack --port 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "biome lint .",
-    "format": "biome format . --write",
-    "check": "biome check --apply ."
+    "lint": "biome lint ./app ./lib ./components",
+    "format": "biome format --write ./app ./lib ./components",
+    "check": "biome check --apply .",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "better-sqlite3": "^11.1.2",
@@ -17,15 +18,17 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@tailwindcss/postcss": "^4",
-    "@types/better-sqlite3": "^7.6.13",
-    "@types/node": "22.14.1",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "biome": "^0.2.2",
-    "tailwindcss": "^4",
-    "tsx": "^4.16.0",
+    "@biomejs/biome": "^1.7.3",
+    "@playwright/test": "^1.44.0",
+    "@tailwindcss/postcss": "^4.1.8",
+    "@types/better-sqlite3": "^7.6.10",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
+    "playwright": "^1.44.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^4.0.0-alpha.13",
     "typescript": "^5"
   }
 }
