day60: Phase 4 WIP - Process management system implementation with PCB, scheduler, and context switch

--- a/day60_mini_os/Makefile
+++ b/day60_mini_os/Makefile
@@ -33,16 +33,18 @@ LDFLAGS = -m elf_i386 -static -nostdlib
 # Source files
 BOOT_ASM = $(BOOT_DIR)/multiboot_kernel.asm
 KERNEL_C = $(wildcard $(KERNEL_DIR)/*.c)
+KERNEL_ASM = $(wildcard $(KERNEL_DIR)/*.asm)
 DRIVERS_C = $(wildcard $(DRIVERS_DIR)/*.c)
 FS_C = $(wildcard $(FS_DIR)/*.c)
 
 # Object files
 BOOT_OBJ = $(patsubst $(BOOT_DIR)/%.asm,$(BUILD_DIR)/%.o,$(BOOT_ASM))
 KERNEL_OBJ = $(patsubst $(KERNEL_DIR)/%.c,$(BUILD_DIR)/%.o,$(KERNEL_C))
+KERNEL_ASM_OBJ = $(patsubst $(KERNEL_DIR)/%.asm,$(BUILD_DIR)/kernel_%.o,$(KERNEL_ASM))
 DRIVERS_OBJ = $(patsubst $(DRIVERS_DIR)/%.c,$(BUILD_DIR)/%.o,$(DRIVERS_C))
 FS_OBJ = $(patsubst $(FS_DIR)/%.c,$(BUILD_DIR)/%.o,$(FS_C))
 
-ALL_OBJ = $(BOOT_OBJ) $(KERNEL_OBJ) $(DRIVERS_OBJ) $(FS_OBJ)
+ALL_OBJ = $(BOOT_OBJ) $(KERNEL_OBJ) $(KERNEL_ASM_OBJ) $(DRIVERS_OBJ) $(FS_OBJ)
 
 # Output
 KERNEL_BIN = $(BUILD_DIR)/kernel.bin
@@ -77,6 +79,11 @@ $(BUILD_DIR)/%.o: $(BOOT_DIR)/%.asm
 $(BUILD_DIR)/%.o: $(KERNEL_DIR)/%.c
 	@mkdir -p $(BUILD_DIR)
 	$(CC) $(CFLAGS) -c $< -o $@
+
+# Compile assembly files - kernel
+$(BUILD_DIR)/kernel_%.o: $(KERNEL_DIR)/%.asm
+	@mkdir -p $(BUILD_DIR)
+	$(AS) $(ASFLAGS) $< -o $@
 
 # Compile C files - drivers
 $(BUILD_DIR)/%.o: $(DRIVERS_DIR)/%.c
