--- a/day62_rust_jit_compiler/backend/Cargo.toml
+++ b/day62_rust_jit_compiler/backend/Cargo.toml
@@ -14,8 +14,7 @@ edition = "2021"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
-# JIT & Assembly
-# mmap = "0.1"
+# JIT & Assembly (実行可能メモリ機能は無効化)
 # libc = "0.2"
 
 # Development & Debug
