--- a/trash/day65_webgl_babanuki_game/package.json
+++ b/trash/day65_webgl_babanuki_game/package.json
@@ -25,8 +25,9 @@
     "@tailwindcss/postcss": "^4",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "22.14.1",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
+    "@types/three": "^0.166.0",
     "biome": "^0.2.2",
     "tailwindcss": "^4",
     "tsx": "^4.16.0",
